fix: SignedStateFileManagerTests  (#11468)
Signed-off-by: Lazar Petrovic <lpetrovic05@gmail.com>